test/rewriter/errors/pat_integer_literal_binary.ml
let invalid_integer_literal = function
  | [%yojson? 0b1111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111] -> false
  | _ -> true
